--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t lwmdev/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run lwndev/react-test npm test -- --coverage
+  - docker run -e CI=true lwndev/react-test npm test
 
 after_success:
  - docker build -t lwndev/multi-client ./client
